--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -5,15 +5,17 @@
 
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success info alert announcement warning,
-	$default: info
+	$default: info,
+	$scope: banner
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
 
 :host {
 	/* stylelint-disable */
-	> .container {
+	> .banner {
 		/* stylelint-enable */
+		@include connotation.connotation;
 		overflow: hidden;
 		max-height: 0;
 		transition: max-height var(#{banner-variables.$banner-transition-delay}, 200ms);
@@ -61,7 +63,7 @@
 }
 
 :host([open]) {
-	> .container {
+	> .banner {
 		max-height: 10rem;
 	}
 }
