--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -21,7 +21,11 @@ $min-inline-size-default: 280px;
 	background-color: var(#{$vvd-side-drawer--background-color}, var(#{scheme-variables.$vvd-color-canvas}));
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, #{$min-inline-size-default});
-	
+
+	&.vvd-side-drawer--alternate {
+		background-color: var(#{scheme-variables.$vvd-color-canvas});
+	}
+
 	&.vvd-side-drawer--modal,
 	&.vvd-side-drawer--dismissible {
 		@media (prefers-reduced-motion: no-preference) {
