--- a/common/foundation/scss/mixins/connotation/_mixins.scss
+++ b/common/foundation/scss/mixins/connotation/_mixins.scss
@@ -28,7 +28,7 @@
 	@if config.$is-host {
 		@return '[connotation="#{$type}"i]';
 	} @else {
-		@return '.#{config.$scope}--connotation-#{$type}';
+		@return '.#{config.$scope}-connotation-#{$type}';
 	}
 }
 
