--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -14,7 +14,7 @@ $is-host: false !default; // backwards compatability on components aren't yet st
 
 @function get-scope-prefix() {
 	@if $scope != null {
-		@return $scope-;
+		@return '#{$scope}-';
 	} @else {
 		@return '';
 	}
