--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -1,12 +1,11 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-foundation/scss/variable-names/font-variable-names' as font-var-names;
 @use '@vonage/vvd-typography/scss/typography';
-@use './vwc-banner-variables.scss' as banner-variables;
+@use 'vwc-banner-variables.scss' as banner-variables;
 
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success info alert announcement warning,
 	$default: info,
-	$scope: banner
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
