--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -6,59 +6,56 @@
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
-.vvd-snackbar {
+.mdc-snackbar {
 	@include connotation.connotation;
-}
 
-:host {
-	@include typography.typography-cat-shorthand('caption');
-
-	.mdc-snackbar {
-		&[position^=TOP] {
-			top: 0;
-			bottom: initial;
-		}
-
-		&[position$=START] {
-			justify-content: flex-start;
-		}
-
-		&[position$=END] {
-			justify-content: flex-end;
-		}
+	&[position^=TOP] {
+		top: 0;
+		bottom: initial;
 	}
 
-	.mdc-snackbar__surface {
-		overflow: hidden;
-		padding: 0;
-		background: none;
-		border-radius: 6px;
-		box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
+	&[position$=START] {
+		justify-content: flex-start;
+	}
+
+	&[position$=END] {
+		justify-content: flex-end;
 	}
 }
 
-.vwc-note {
-	#{connotation.$vvd-color-connotation}: inherit;
+.mdc-snackbar__surface {
+	background-color: var(#{scheme-variables.$vvd-color-canvas});
+	border-radius: 6px;
+	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.05), 0 12px 16px rgba(0, 0, 0, 0.05), 0 4px 24px rgba(0, 0, 0, 0.1);
+	color: var(#{scheme-variables.$vvd-color-on-canvas});
 }
+
+.mdc-snackbar__label {
+	@include typography.typography-cat-shorthand('body-2');
+	padding: 22px 16px;
+}
+
+.icon {
+	padding-inline-start: 16px;
+}
+
 // default flavor
 :host(:not([legacy])) {
 	.vvd-snackbar {
 		display: flex;
 		flex: 1;
-		background-color: var(#{scheme-variables.$vvd-color-canvas});
-		color: var(#{scheme-variables.$vvd-color-on-canvas});
 	}
 
-	.vwc-note {
-		flex: 1;
-		align-self: center;
-		padding: 16px;
-		border: 0;
-		box-shadow: none;
-	}
-	::part(icon) {
-		color: var(#{connotation.$vvd-color-connotation});
-	}
+	// .vwc-note {
+	// 	flex: 1;
+	// 	align-self: center;
+	// 	padding: 16px;
+	// 	border: 0;
+	// 	box-shadow: none;
+	// }
+	// ::part(icon) {
+	// 	color: var(#{connotation.$vvd-color-connotation});
+	// }
 
 	.actions-container {
 		display: flex;
