--- a/components/snackbar/src/vwc-snackbar.scss
+++ b/components/snackbar/src/vwc-snackbar.scss
@@ -46,6 +46,11 @@ $spacing: 16px;
 	margin-inline-start: $spacing;
 }
 
+.dismiss-button {
+	margin-inline-end: -$spacing / 2;
+	margin-inline-start: -$spacing / 2;
+}
+
 .dismiss-container {
 	display: flex;
 	align-items: center;
