--- a/components/icon-button/src/partials/vwc-icon-button-variables.scss
+++ b/components/icon-button/src/partials/vwc-icon-button-variables.scss
@@ -1,3 +1,7 @@
 $icon-button-shape: --vvd-icon-button-shape;
 $icon-button-block-size: --vvd-icon-button-block-size;
 $icon-button-icon-size-variable-name: --vvd-icon-button-icon-size;
+// TODO connotation variable currently needed for button-toggle-group
+// ! should deprecate once button-toggle-group couples its own child buttons
+$vvd-icon-button-color: --vvd-icon-button-color;
+$vvd-icon-button-on-color: --vvd-icon-button-on-color;
