--- a/components/icon-button/src/vwc-icon-button.scss
+++ b/components/icon-button/src/vwc-icon-button.scss
@@ -43,9 +43,9 @@ $block-sizes: (
 	align-items: center;
 	justify-content: center;
 	border: var(#{layout.$vvd-layout-color-outline});
-	background-color: var(#{layout.$vvd-layout-color-fill});
+	background-color: var(#{icon-button-variables.$vvd-icon-button-color}, var(#{layout.$vvd-layout-color-fill}));
 	border-radius: var(#{icon-button-variables.$icon-button-shape});
-	color: var(#{layout.$vvd-layout-color-text});
+	color: var(#{icon-button-variables.$vvd-icon-button-on-color}, var(#{layout.$vvd-layout-color-text}));
 	font-size: inherit;
 	&:disabled {
 		color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -73,7 +73,8 @@ $block-sizes: (
 }
 
 vwc-icon {
-	#{connotation.$vvd-color-connotation}: var(#{layout.$vvd-layout-color-text});
+	// TODO remove next line when VIV-704 resolved
+	#{connotation.$vvd-color-connotation}: initial;
 	:host & {
 		#{icon-variables.$icon-size-variable-name}: var(#{icon-button-variables.$icon-button-icon-size-variable-name}, 20px);
 	}
