--- a/components/icon/src/vwc-icon.scss
+++ b/components/icon/src/vwc-icon.scss
@@ -1,9 +1,6 @@
 @use 'partials/vwc-icon-variables' as icon-variables;
 @forward 'partials/vwc-icon-connotation';
 
-:host {
-	display: inline-block;
-}
 
 :host([size='small']) {
 	#{icon-variables.$icon-size-variable-name}: 16px;
@@ -24,23 +21,20 @@
 	vertical-align: middle;
 }
 
-figure {
-	margin: unset;
-}
-
-.icon {
+:host {
+	// TODO deprecate --icon-size as size can actually be set by plain width/height properties (follow VIV-705)
 	$size: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}));/* --icon-size for backwards compatability */
-	display: inline-flex;
+	display: inline-block;
 	width: #{$size};
-	max-width: 100%;
 	height: #{$size};
-	max-height: 100%;
 	block-size: #{$size};
 	inline-size: #{$size};
 	line-height: 1;
-	max-block-size: 100%;
-	max-inline-size: 100%;
 	vertical-align: middle;
+}
+
+.icon {
+	display: contents;
 
 	> svg {
 		block-size: 100%;
