--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,7 +1,7 @@
-$vvd-side-drawer--padding: --vvd-side-drawer--padding;
-$vvd-side-drawer--min-inline-size: --vvd-side-drawer--min-inline-size;
-$vvd-side-drawer--z-index: --vvd-side-drawer--z-index;
-$vvd-side-drawer--background-color: --vvd-side-drawer--background-color;
+$side-drawer--padding: --side-drawer--padding;
+$side-drawer--min-inline-size: --side-drawer--min-inline-size;
+$side-drawer--z-index: --side-drawer--z-index;
+$side-drawer--background-color: --side-drawer--background-color;
 
 $z-index-default: 6;
 $padding-default: 16px;
@@ -17,41 +17,41 @@ $min-inline-size-default: 280px;
 }
 
 .side-drawer {
-	z-index: var(#{$vvd-side-drawer--z-index}, #{$z-index-default});
-	background-color: var(#{$vvd-side-drawer--background-color}, var(#{scheme-variables.$vvd-color-canvas}));
+	z-index: var(#{$side-drawer--z-index}, #{$z-index-default});
+	background-color: var(#{$side-drawer--background-color}, var(#{scheme-variables.$vvd-color-canvas}));
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	min-inline-size: var(#{$vvd-side-drawer--min-inline-size}, #{$min-inline-size-default});
+	min-inline-size: var(#{$side-drawer--min-inline-size}, #{$min-inline-size-default});
 
-	&.vvd-side-drawer--alternate {
+	&.side-drawer--alternate {
 		background-color: var(#{scheme-variables.$vvd-color-canvas});
 	}
 
-	&.vvd-side-drawer--modal,
-	&.vvd-side-drawer--dismissible {
+	&.side-drawer--modal,
+	&.side-drawer--dismissible {
 		@media (prefers-reduced-motion: no-preference) {
 			transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 		}
 
-		&:not(.vvd-side-drawer--open) {
+		&:not(.side-drawer--open) {
 			transform: translateX(-100%);
 		}
 	}
 }
 
-.vvd-side-drawer--top-bar {
+.side-drawer--top-bar {
 	display: flex;
 	align-items: center;
 	block-size: 64px;
-	padding-inline-end: var(#{$vvd-side-drawer--padding}--top-bar, #{$padding-default});
-	padding-inline-start: var(#{$vvd-side-drawer--padding}--top-bar, #{$padding-default});
+	padding-inline-end: var(#{$side-drawer--padding}--top-bar, #{$padding-default});
+	padding-inline-start: var(#{$side-drawer--padding}--top-bar, #{$padding-default});
 }
 
-.vvd-side-drawer--content {
-	padding-inline-end: var(#{$vvd-side-drawer--padding}--content, #{$padding-default});
-	padding-inline-start: var(#{$vvd-side-drawer--padding}--content, #{$padding-default});
+.side-drawer--content {
+	padding-inline-end: var(#{$side-drawer--padding}--content, #{$padding-default});
+	padding-inline-start: var(#{$side-drawer--padding}--content, #{$padding-default});
 }
 
-.vvd-side-drawer--modal {
+.side-drawer--modal {
 	position: fixed;
 	top: 0;
 	right: initial;
@@ -64,7 +64,7 @@ $min-inline-size-default: 280px;
 	&:not(&--open) {width: 0;}
 }
 
-.vvd-side-drawer--scrim {
+.side-drawer--scrim {
 	@include scrim-mixins.scrim-variables;
 	position: fixed;
 	z-index: calc(#{$z-index-default} - 1);
