--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -6,7 +6,7 @@ $shades: () !default;
 $decoratives: () !default;
 $connotations-set: $predefined-connotation-set !default;
 $scope: null !default;
-$is-host: false !default; // backwards compatability on components aren't yet structured with base wrapper
+$is-host: false !default; // for backwards compatability on components that aren't yet structured with base wrapper
 
 @function get-scope-prefix() {
 	@if $scope != null {
